--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="flex-container">
                     <div class="flex-item" id="flex-section-item-1">
-                        <img src="gfx-a.png" alt="">
+                        <img src="images/gfx-a.png" alt="">
                     </div>
                     <div class="flex-item" id="flex-section-item-2">
                         <h5 class="subtitle">About the disease</h5>
@@ -97,29 +97,29 @@
                     <div class="flex-item" id="flex-section-item-3">
                         <h5 class="subtitle">How coronavirus is spread</h5>
                         <h2 class="title">Transmission of COVID-19</h2>
-                        <p class="because"">Because it's a new illness, we do not know exactly how
+                        <p class="because">Because it's a new illness, we do not know exactly how
                             coronavirus spreads from person to person. Similar viruses are spread in cough droplets.</p>
                     </div>
                 </div>
             </div>
-            <div class=" container">
+            <div class="container">
                             <div class="flex-container">
                                 <div class="flex-item" id="flex-section-item-4">
-                                    <img src="spread-azure-a.png" alt="" class="img">
+                                    <img src="images/spread-azure-a.png" alt="" class="img">
                                     <h4>Person-to-person spread as close contact with infected</h4>
                                     <p>The coronavirus is thought to spread mainly from person to person. This can
                                         happen between
                                         people who are in close contact with one another.</p>
                                 </div>
                                 <div class="flex-item" id="flex-section-item-4">
-                                    <img src="spread-azure-b.png" alt="" class="img">
+                                    <img src="images/spread-azure-b.png" alt="" class="img">
                                     <h4>Touching or contact with infected surfaces or objects</h4>
                                     <p>A person can get COVID-19 by touching a surface or object that has the virus on
                                         it and then
                                         touching their own mouth, nose, or possibly their eyes.</p>
                                 </div>
                                 <div class="flex-item" id="flex-section-item-4">
-                                    <img src="spread-azure-c.png" alt="" class="img">
+                                    <img src="images/spread-azure-c.png" alt="" class="img">
                                     <h4>Droplets that from infected person coughs or sneezes</h4>
                                     <p>The coronavirus is thought to spread mainly from person to person. This can
                                         happen between
@@ -162,7 +162,7 @@
                                 </p>
                             </div>
                             <div class="flex-item" id="flex-section-item-1">
-                                <img src="gfx-b.png" alt="" style="height: auto; float: inline-start;">
+                                <img src="images/gfx-b.png" alt="" style="height: auto; float: inline-start;">
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                     <div class="container">
                         <div class="flex-container">
                             <div class="flex-item" id="flex-section-item-3">
-                                <img src="gfx-c.png" alt="">
+                                <img src="images/gfx-c.png" alt="">
                             </div>
                             <div class="flex-item" id="flex-section-item-2">
                                 <h5 class="subtitle">How to Protect Yourself?</h5>
