--- a/donate.html
+++ b/donate.html
@@ -38,7 +38,7 @@
         </ul>
     </nav>
 
-    <header style="background-image: url(header_donate.jpg);">
+    <header style="background-image: url(images/header_donate.jpg);">
         <div class="container">
             <div class="flex-container">
                 <div class="flex-header-item" id="flex-header-item-1">
