--- a/about_us.html
+++ b/about_us.html
@@ -39,7 +39,7 @@
         </ul>
     </nav>
 
-    <header style="background-image: url(header_about_us.jpg);">
+    <header style="background-image: url(images/header_about_us.jpg);">
         <div class="container">
             <div class="flex-container">
                 <div class="flex-header-item" id="flex-header-item-1">
